Release 3.4.10 - Unreleased

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-2502: Flaky Test:
  org.apache.zookeeper.server.quorum.CnxManagerTest.testCnxFromFutureVersion
  (Michael Han via phunt)


Release 3.4.9 - 2016-08-23

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-2375: Prevent multiple initialization of login object in each
  ZooKeeperSaslClient instance (yuemeng via rakeshr)

  ZOOKEEPER-2379: recent commit broke findbugs qabot check
  (rakeshr via cnauroth)

  ZOOKEEPER-2294 Ant target generate-clover-reports is broken
  (charlie via phunt)

  ZOOKEEPER-2378 upgrade ivy to recent version (phunt)

  ZOOKEEPER-2373 Licenses section missing from pom file (phunt)

  ZOOKEEPER-2133 zkperl: Segmentation fault if getting a node with
  null value (Botond Hejj via phunt)

  ZOOKEEPER-2283 traceFile property is not used in the ZooKeeper, it
  should be removed from documentation (Arshad Mohammad via phunt)

  ZOOKEEPER-2385 Zookeeper trunk build is failing on windows
  (Arshad Mohammad via phunt)

  ZOOKEEPER-2195 fsync.warningthresholdms in zoo.cfg not working
  (Biju Nair via phunt)
  
  ZOOKEEPER-2141 ACL cache in DataTree never removes entries
  (Adam Milne-Smith via camille)

  ZOOKEEPER-2423: Upgrade Netty version due to security vulnerability
  (CVE-2014-3488) (Michael Han via phunt)

  ZOOKEEPER-2405: getTGT() in Login.java mishandles confidential
  information (Michael Han via phunt)

  ZOOKEEPER-2477: documentation should refer to Java cli shell and not
  C cli shell (Abraham Fine via phunt)

  ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
  (Camille via phunt)

  ZOOKEEPER-2498: Potential resource leak in C client when processing
  unexpected / out of order response (Michael Han via rgs)

  Fix command handling in the C client shell (phunt via fpj)

  ZOOKEEPER-2452: Back-port ZOOKEEPER-1460 to 3.4 for IPv6 literal
  address support. (Abraham Fine via cnauroth)

  ZOOKEEPER-2247: Zookeeper service becomes unavailable when leader